<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>separable_jaws</name>
    <version>0.0.0</version>
    <description>ROS2 metapackage for separable_jaws.</description>
    <maintainer email="jet22854111@gmail.com">QuantumSpawner</maintainer>
    <author email="jet22854111@gmail.com">QuantumSpawner</author>
    <license>TODO</license>

    <!-- buile dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- execute dependencies -->
    <exec_depend>dynamixel_hardware</exec_depend>
    <exec_depend>separable_jaws_bringup</exec_depend>
    <exec_depend>separable_jaws_config</exec_depend>
    <exec_depend>separable_jaws_description</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
